--- a/DaPengTi2/DaPengTi2-Info.plist
+++ b/DaPengTi2/DaPengTi2-Info.plist
@@ -24,6 +24,11 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>FZZhunYuan-M02T.ttf</string>
+		<string>STZHONGS.TTF</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
